# NekoPilot-Mac

./: .gitignore  CHANGELOG.MD  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  README_CN.md  SECURITY.md  deno.json  index.html  package.json  tsconfig.json  vite.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: auto-close-issues.yml  cache-cleanup.yml  release.yml  test.yml
.husky/: pre-commit  pre-push
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASE.md
docs/audits/: 2026-07-19-import-flow.md  2026-07-19-visual-review.md
docs/claude/: README.md  config-template-loading.md  dns-override.md  update-argv-suppression.md
docs/design-reference/: README.md
lang/: en.json  zh.json
native/: Package.resolved  Package.swift  README.md
native/CoreCommand/: main.go
native/Proto/: started_service.proto
native/scripts/: build-sing-box-macos-arm64.sh  check-release-policy.sh  install-git-hooks.sh  measure-app-lifecycle.sh  measure-core-performance.sh  measure-live-runtime.sh  package-macos.sh  smoke-test-macos-app.sh  ui-smoke.swift  verify-macos-artifacts.sh  verify-macos-bundle.sh  version.sh  window-count.swift
scripts/: build-tun-service.ts  check-tailwind-canonical.ts  check-ui-style.ts  download-binaries.ts  export-native-template.ts  linux-check.sh  post-receive-github-sync.sh  process-changelog.ts  safe-file-replacement.ts  sync-templates.ts  tmp-dns-watch-test.sh  tsconfig.json  version-sync.ts
scripts/__tests__/: release-platform-policy.test.ts  safe-file-replacement.test.ts
src/: App.css  App.tsx  main.tsx  tray.tsx  window-manger.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/linux/: 49-onebox.rules  cloud.oneoh.onebox.policy  onebox-tun-helper
src-tauri/src/: lib.rs  macos_theme.m  main.rs  utils.rs
src-tauri/src/app/: events.rs  mod.rs  plugins.rs  setup.rs  state.rs
src-tauri/src/commands/: config_build.rs  config_fetch.rs  config_write.rs  dns.rs  mod.rs  network.rs  node_delay.rs  prestart.rs  rule_sets.rs  settings.rs  shell.rs  subscription.rs  theme.rs  whitelist.rs
src-tauri/src/core/: log.rs  mod.rs  monitor.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/engine/common/: helper.rs  mod.rs  readiness.rs  state_machine.rs  sysproxy.rs
src-tauri/src/engine/linux/: mod.rs
src-tauri/src/engine/macos/: mod.rs
src-tauri/src/engine/windows/: mod.rs  native.rs  watchdog.rs
src-tauri/tun-service/: Cargo.toml
src-tauri/tun-service/src/: dns.rs  lib.rs  main.rs  scm.rs  service.rs
src/__tests__/: app-dialog.test.tsx  async-pool.test.ts  auto-node-selection.test.ts  clash-api-fetch.test.ts  clash-api-stream.test.ts  config-sync.test.ts  custom-rules.test.ts  external-url.test.ts  github-release-update.test.ts  lifecycle-queue.test.ts  node-delay-history.test.ts  node-delay.test.ts  node-list-order.test.ts  node-pool.test.ts  node-protocol.test.ts  prestart-repair-modal.test.tsx  router-saving-state.test.tsx  select-node-race.test.tsx  subscription-config.test.ts  subscription-import-error.test.ts  subscription-metadata.test.ts  subscription-userinfo.test.ts  template-branding.test.ts  ui-primitives.test.tsx  ui-theme.test.ts
src/action/: db.ts  modal-state-hook.ts  proxy-link.ts  subscription-config.ts  subscription-hooks.ts
src/config/: common.ts
src/hooks/: useAutoNodeSelection.ts  useDB.ts  useEngineState.ts  useSelectedSubscriptionNodeSync.ts  useSwr.ts  useTheme.ts  useVersion.ts
src/page/: config.tsx  home.css  (+4 more)
(+152 files in other folders)
