[package]
name = "nekopilot"
version = "1.0.5"
description = "NekoPilot is a macOS proxy client powered by sing-box."
authors = ["NekoPilot"]
edition = "2021"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nekopilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"
core-foundation = "0.9"

[dependencies]
libc = "0.2"
env_logger = "0.11.8"
log = "0.4"
tauri = { version = "2", features = [ "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0"
tauri-plugin-log = "2"
lazy_static = "1.5.0"
flate2 = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
onebox-sysproxy-rs = { git = "https://github.com/OneOhCloud/onebox-sysproxy-rs", tag = "v0.0.3" }
tauri-plugin-clipboard-manager = "2"

webbrowser = "1.0.4"
# keyring removed — privilege escalation no longer stores passwords
rand = "0.10.0"
png = "0.18.1"
tauri-plugin-deep-link = "2"
url = "2"
percent-encoding = "2.3"
sha2 = "0.10"
base64 = "0.22"


onebox_lifecycle = { git = "https://github.com/OneOhCloud/onebox-lifecycle", tag = "v0.1.1" }
#onebox_lifecycle = { git = "https://github.com/OneOhCloud/onebox-lifecycle", branch = "dev" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_System_Services", "Win32_System_Threading"] }
tun-service = { path = "tun-service" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[dev-dependencies]
filetime = "0.2.27"
tempfile = "3.27.0"


[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[workspace]
members = ["tun-service"]
resolver = "2"
